<resources>
    <string name="app_name">StoryApp</string>
    <string name="title">Lorem ipsum</string>
    <string name="description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Your Email Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Your Password</string>
    <string name="dont_have_account">Dont Have Account?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login_here">Login here</string>
    <string name="username">Username</string>
    <string name="your_username">Your username</string>
    <string name="settings">Settings</string>
    <string name="password_require">(must be at least 8 characters)</string>
    <string name="please_wait">Please Wait…</string>
    <string name="add">add</string>
    <string name="image">image</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="darkmode">darkmode</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="description_content">description</string>
    <string name="fill_the_description_here">Fill the description here</string>
    <string name="upload">upload</string>
    <string name="empty_image_warning">empty image warning</string>
    <string name="empty_description_warning">please fill the description</string>
    <string name="appwidget_text">STORY APP</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">empty text</string>
    <string name="minimum_characters">password minimum at least 8 character </string>
    <string name="camera_error">failed to open camera</string>
    <string name="maps">open maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="style_error">maps can\'t get style</string>
    <string name="add_your_location">add your current location?</string>
    <string name="retry">Retry Load</string>
</resources>