<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/primaryBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.add.AddStoryActivity"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingHorizontal="24dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/grey">
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_image"
                android:contentDescription="@string/image"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_gallery"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/gallery"
                android:elevation="4dp"
                android:background="@drawable/button_background"
                android:textAllCaps="true"
                android:textColor="@color/white"/>
            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_camera"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/camera"
                android:elevation="4dp"
                android:background="@drawable/button_background"
                android:textAllCaps="true"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:text="@string/description_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_description"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:lines="8"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:background="@drawable/rounded_background"
                android:hint="@string/fill_the_description_here"
                android:inputType="textMultiLine"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <CheckBox
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_location"
                android:textColor="@color/black"/>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/upload"
            android:elevation="6dp"
            android:background="@drawable/button_background"
            android:textAllCaps="true"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>
